; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_arizona-irq.c_arizona_set_irq_wake.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_arizona-irq.c_arizona_set_irq_wake.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arizona = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @arizona_set_irq_wake(%struct.arizona* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.arizona*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.arizona* %0, %struct.arizona** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load %struct.arizona*, %struct.arizona** %5, align 8
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @arizona_map_irq(%struct.arizona* %8, i32 %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* %6, align 4
  store i32 %14, i32* %4, align 4
  br label %19

15:                                               ; preds = %3
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @irq_set_irq_wake(i32 %16, i32 %17)
  store i32 %18, i32* %4, align 4
  br label %19

19:                                               ; preds = %15, %13
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i32 @arizona_map_irq(%struct.arizona*, i32) #1

declare dso_local i32 @irq_set_irq_wake(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
